@@ -6,6 +6,8 @@ import io.vavr.control.Either;
 import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
+import org.jembi.jempi.libmpi.MpiGeneralError;
+import org.jembi.jempi.libmpi.MpiServiceError;
 import org.jembi.jempi.shared.models.*;
 import org.jembi.jempi.shared.utils.AppUtils;
 
@@ -13,25 +15,84 @@ import java.time.LocalDateTime;
 import java.util.*;
 
 import static org.jembi.jempi.libmpi.dgraph.CustomDgraphConstants.GOLDEN_RECORD_FIELD_NAMES;
+import static org.jembi.jempi.shared.utils.AppUtils.OBJECT_MAPPER;
 
 final class DgraphQueries {
 
    static final String EMPTY_FIELD_SENTINEL = "EMPTY_FIELD_SENTINEL";
    private static final Logger LOGGER = LogManager.getLogger(DgraphQueries.class);
+   private static final String GET_SOURCE_ID =
+         """
+         query query_source_id($facility_id: string, $patient_id: string) {
+           var(func: eq(SourceId.facility, $facility_id)) {
+             A as uid
+           }
+           var(func: eq(SourceId.patient, $patient_id)) {
+             B as uid
+           }
+           all(func: uid(A,B)) @filter (uid(A) AND uid(B)) {
+             uid
+             expand(SourceId)
+           }
+         }
+         """;
+   private static final String GET_EXPANDED_SOURCE_ID_LIST =
+         """
+         query query_expanded_source_id($facility_id: string, $patient_id: string) {
+           var(func: eq(SourceId.facility, $facility_id)) {
+             A as uid
+           }
+           var(func: eq(SourceId.patient, $patient_id)) {
+             B as uid
+           }
+           all(func: uid(A,B)) @filter (uid(A) AND uid(B)) {
+             uid
+             expand(SourceId)
+             ~GoldenRecord.source_id {
+               uid
+               expand(GoldenRecord)
+             }
+           }
+         }
+         """;
+   private static final String RECORD_GOLDEN_UID_INTERACTION_UID_LIST =
+         """
+         query recordGoldenUidInteractionUidList($gid: string) {
+           list(func: uid($gid)) {
+             uid
+             list: GoldenRecord.interactions {
+               uid
+             }
+           }
+         }""";
 
    private DgraphQueries() {
    }
 
-   static DgraphSourceIds runSourceIdQuery(final String query) {
+   private static DgraphSourceIds runSourceIdQuery(
+         final Map<String, String> vars) {
       try {
-         final var json = DgraphClient.getInstance().executeReadOnlyTransaction(query, null);
+         final var json = DgraphClient.getInstance().executeReadOnlyTransaction(GET_SOURCE_ID, vars);
          if (!StringUtils.isBlank(json)) {
-            return AppUtils.OBJECT_MAPPER.readValue(json, DgraphSourceIds.class);
+            return OBJECT_MAPPER.readValue(json, DgraphSourceIds.class);
          }
       } catch (JsonProcessingException e) {
          LOGGER.error(e.getLocalizedMessage(), e);
       }
       return new DgraphSourceIds(List.of());
+   }
+
+   private static DgraphReverseGoldenRecordListFromSourceId runReverseGoldenRecordListFromSourceId(
+         final Map<String, String> vars) {
+      try {
+         final var json = DgraphClient.getInstance().executeReadOnlyTransaction(GET_EXPANDED_SOURCE_ID_LIST, vars);
+         if (!StringUtils.isBlank(json)) {
+            return OBJECT_MAPPER.readValue(json, DgraphReverseGoldenRecordListFromSourceId.class);
+         }
+      } catch (JsonProcessingException e) {
+         LOGGER.error(e.getLocalizedMessage(), e);
+      }
+      return new DgraphReverseGoldenRecordListFromSourceId(List.of());
    }
 
    static DgraphInteractions runInteractionsQuery(
@@ -40,7 +101,7 @@ final class DgraphQueries {
       try {
          final var json = DgraphClient.getInstance().executeReadOnlyTransaction(query, vars);
          if (!StringUtils.isBlank(json)) {
-            return AppUtils.OBJECT_MAPPER.readValue(json, DgraphInteractions.class);
+            return OBJECT_MAPPER.readValue(json, DgraphInteractions.class);
          }
       } catch (JsonProcessingException e) {
          LOGGER.error(e.getLocalizedMessage(), e);
@@ -54,7 +115,7 @@ final class DgraphQueries {
       try {
          final var json = DgraphClient.getInstance().executeReadOnlyTransaction(query, vars);
          if (!StringUtils.isBlank(json)) {
-            return AppUtils.OBJECT_MAPPER.readValue(json, DgraphPaginatedUidList.class);
+            return OBJECT_MAPPER.readValue(json, DgraphPaginatedUidList.class);
          }
       } catch (JsonProcessingException e) {
          LOGGER.error(e.getLocalizedMessage());
@@ -68,7 +129,7 @@ final class DgraphQueries {
       try {
          final var json = DgraphClient.getInstance().executeReadOnlyTransaction(query, vars);
          if (!StringUtils.isBlank(json)) {
-            return AppUtils.OBJECT_MAPPER.readValue(json, DgraphPaginationUidListWithInteractionCount.class);
+            return OBJECT_MAPPER.readValue(json, DgraphPaginationUidListWithInteractionCount.class);
          }
       } catch (JsonProcessingException e) {
          LOGGER.error(e.getLocalizedMessage());
@@ -82,7 +143,7 @@ final class DgraphQueries {
       try {
          final var json = DgraphClient.getInstance().executeReadOnlyTransaction(query, vars);
          if (!StringUtils.isBlank(json)) {
-            return AppUtils.OBJECT_MAPPER.readValue(json, DgraphGoldenRecords.class);
+            return OBJECT_MAPPER.readValue(json, DgraphGoldenRecords.class);
          }
       } catch (JsonProcessingException e) {
          LOGGER.error(e.getLocalizedMessage());
@@ -96,7 +157,7 @@ final class DgraphQueries {
       try {
          final var json = DgraphClient.getInstance().executeReadOnlyTransaction(query, vars);
          if (!StringUtils.isBlank(json)) {
-            return AppUtils.OBJECT_MAPPER.readValue(json, DgraphExpandedGoldenRecords.class);
+            return OBJECT_MAPPER.readValue(json, DgraphExpandedGoldenRecords.class);
          }
       } catch (JsonProcessingException e) {
          LOGGER.error(e.getLocalizedMessage());
@@ -131,23 +192,16 @@ final class DgraphQueries {
    }
 
    static List<String> findExpandedGoldenIds(final String goldenId) {
-      final String query = String.format(Locale.ROOT,
-                                         """
-                                         query recordGoldenUidInteractionUidList() {
-                                             list(func: uid(%s)) {
-                                                 uid
-                                                 list: GoldenRecord.interactions {
-                                                     uid
-                                                 }
-                                             }
-                                         }""", goldenId);
       try {
-         final var json = DgraphClient.getInstance().executeReadOnlyTransaction(query, null);
-         final var response = AppUtils.OBJECT_MAPPER.readValue(json, DgraphUidUidList.class);
-         if (response.list().size() == 1) {
-            final var list = new ArrayList<String>();
-            response.list().get(0).list().forEach(x -> list.add(x.uid()));
-            return list;
+         final Map<String, String> map = new HashMap<>();
+         map.put("$gid", goldenId);
+         final var json = DgraphClient.getInstance().executeReadOnlyTransaction(RECORD_GOLDEN_UID_INTERACTION_UID_LIST, map);
+         final var response = OBJECT_MAPPER.readValue(json, DgraphUidUidList.class);
+         if (AppUtils.isNullOrEmpty(response.list())) {
+            return List.of();
+         }
+         if (response.list().size() == 1 && !AppUtils.isNullOrEmpty(response.list().getFirst().list())) {
+            return response.list().getFirst().list().stream().map(DgraphUid::uid).toList();
          }
       } catch (JsonProcessingException e) {
          LOGGER.error(e.getLocalizedMessage());
@@ -164,7 +218,7 @@ final class DgraphQueries {
                            }""";
       try {
          final var json = DgraphClient.getInstance().executeReadOnlyTransaction(query, null);
-         final var response = AppUtils.OBJECT_MAPPER.readValue(json, DgraphUidList.class);
+         final var response = OBJECT_MAPPER.readValue(json, DgraphUidList.class);
          final var list = new ArrayList<String>();
          response.list().forEach(x -> list.add(x.uid()));
          return list;
@@ -177,16 +231,15 @@ final class DgraphQueries {
    static List<String> fetchGoldenIds(
          final long offset,
          final long length) {
-      final String query = String.format(Locale.ROOT,
-                                         """
-                                         query recordGoldenIds() {
-                                           list(func: type(GoldenRecord), offset: %d, first: %d) {
-                                             uid
-                                           }
-                                         }""", offset, length);
+      final String query = String.format(Locale.ROOT, """
+                                                      query recordGoldenIds() {
+                                                        list(func: type(GoldenRecord), offset: %d, first: %d) {
+                                                          uid
+                                                        }
+                                                      }""", offset, length);
       try {
          final var json = DgraphClient.getInstance().executeReadOnlyTransaction(query, null);
-         final var response = AppUtils.OBJECT_MAPPER.readValue(json, DgraphUidList.class);
+         final var response = OBJECT_MAPPER.readValue(json, DgraphUidList.class);
          return response.list()
                         .stream()
                         .map(DgraphUid::uid)
@@ -202,7 +255,7 @@ final class DgraphQueries {
    private static long getCount(final String query) {
       try {
          final var json = DgraphClient.getInstance().executeReadOnlyTransaction(query, null);
-         final var response = AppUtils.OBJECT_MAPPER.readValue(json, DgraphCountList.class);
+         final var response = OBJECT_MAPPER.readValue(json, DgraphCountList.class);
          return response.list().get(0).count();
       } catch (JsonProcessingException e) {
          LOGGER.error(e.getLocalizedMessage());
@@ -221,13 +274,12 @@ final class DgraphQueries {
    }
 
    static long countGoldenRecordEntities(final String goldenId) {
-      final var query = String.format(Locale.ROOT,
-                                      """
-                                      query recordCount() {
-                                        list(func: uid(%s)) {
-                                          count: count(GoldenRecord.interactions)
-                                        }
-                                      }""", goldenId);
+      final var query = String.format(Locale.ROOT, """
+                                                   query recordCount() {
+                                                     list(func: uid(%s)) {
+                                                       count: count(GoldenRecord.interactions)
+                                                     }
+                                                   }""", goldenId);
       return getCount(query);
    }
 
@@ -245,8 +297,7 @@ final class DgraphQueries {
          final List<Function1<CustomDemographicData, DgraphGoldenRecords>> listFunction,
          final CustomDemographicData interaction) {
       final LinkedList<CustomDgraphGoldenRecord> candidateGoldenRecords = new LinkedList<>();
-      for (Function1<CustomDemographicData,
-            DgraphGoldenRecords> deterministicFunction : listFunction) {
+      for (Function1<CustomDemographicData, DgraphGoldenRecords> deterministicFunction : listFunction) {
          final var block = deterministicFunction.apply(interaction);
          if (!block.all().isEmpty()) {
             final var list = block.all();
@@ -264,7 +315,7 @@ final class DgraphQueries {
             String.format(Locale.ROOT, CustomDgraphConstants.QUERY_GET_EXPANDED_INTERACTIONS, String.join(",", ids));
       final String json = DgraphClient.getInstance().executeReadOnlyTransaction(query, null);
       try {
-         final var records = AppUtils.OBJECT_MAPPER.readValue(json, DgraphExpandedInteractions.class);
+         final var records = OBJECT_MAPPER.readValue(json, DgraphExpandedInteractions.class);
          return records.all();
       } catch (JsonProcessingException e) {
          LOGGER.error(e.getLocalizedMessage());
@@ -272,34 +323,19 @@ final class DgraphQueries {
       }
    }
 
-   static List<CustomDgraphGoldenRecord> findGoldenRecords(final List<String> ids) {
-      final String query = String.format(Locale.ROOT, CustomDgraphConstants.QUERY_GET_GOLDEN_RECORDS, String.join(",", ids));
+   static Either<MpiGeneralError, List<CustomDgraphGoldenRecord>> findGoldenRecords(final List<String> ids) {
+      final var idListAsString = String.join(",", ids);
+      final String query = String.format(Locale.ROOT, CustomDgraphConstants.QUERY_GET_GOLDEN_RECORDS, idListAsString);
       final String json = DgraphClient.getInstance().executeReadOnlyTransaction(query, null);
       try {
-         final var records = AppUtils.OBJECT_MAPPER.readValue(json, DgraphGoldenRecords.class);
-         return records.all();
+         final var records = OBJECT_MAPPER.readValue(json, DgraphGoldenRecords.class);
+         return Either.right(records.all());
       } catch (JsonProcessingException e) {
          LOGGER.error(e.getLocalizedMessage());
-         return List.of();
+         return Either.left(new MpiServiceError.CRGidDoesNotExistError(idListAsString));
       }
    }
 
-   static List<CustomDgraphExpandedGoldenRecord> getExpandedGoldenRecords(final List<String> ids) {
-      final String query =
-            String.format(Locale.ROOT, CustomDgraphConstants.QUERY_GET_EXPANDED_GOLDEN_RECORDS, String.join(",", ids));
-      final String json = DgraphClient.getInstance().executeReadOnlyTransaction(query, null);
-      try {
-         final var records = AppUtils.OBJECT_MAPPER.readValue(json, DgraphExpandedGoldenRecords.class);
-         return records.all();
-      } catch (JsonProcessingException e) {
-         LOGGER.error(e.getLocalizedMessage());
-         return List.of();
-      }
-   }
-
-   private static String camelToSnake(final String str) {
-      return str.replaceAll("([A-Z]+)", "\\_$1").toLowerCase();
-   }
 
 /*
    private static List<String> findRecordFieldNamesByType(final RecordType recordType) {
@@ -314,11 +350,24 @@ final class DgraphQueries {
    }
 */
 
+   static List<CustomDgraphExpandedGoldenRecord> getExpandedGoldenRecords(final List<String> ids) {
+      final String query =
+            String.format(Locale.ROOT, CustomDgraphConstants.QUERY_GET_EXPANDED_GOLDEN_RECORDS, String.join(",", ids));
+      final String json = DgraphClient.getInstance().executeReadOnlyTransaction(query, null);
+      try {
+         final var records = OBJECT_MAPPER.readValue(json, DgraphExpandedGoldenRecords.class);
+         return records.all();
+      } catch (JsonProcessingException e) {
+         LOGGER.error(e.getLocalizedMessage());
+         return List.of();
+      }
+   }
+
    private static List<String> getSimpleSearchQueryArguments(final List<ApiModels.ApiSearchParameter> parameters) {
       List<String> args = new ArrayList<>();
       for (ApiModels.ApiSearchParameter param : parameters) {
          if (!param.value().isEmpty()) {
-            String fieldName = camelToSnake(param.fieldName());
+            String fieldName = AppUtils.camelToSnake(param.fieldName());
             args.add(String.format(Locale.ROOT, "$%s: string", fieldName));
          }
       }
@@ -331,7 +380,7 @@ final class DgraphQueries {
          List<ApiModels.ApiSearchParameter> parameters = payloads.get(i).parameters();
          for (ApiModels.ApiSearchParameter param : parameters) {
             if (!param.value().isEmpty()) {
-               String fieldName = camelToSnake(param.fieldName());
+               String fieldName = AppUtils.camelToSnake(param.fieldName());
                args.add(String.format(Locale.ROOT, "$%s_%d: string", fieldName, i));
             }
          }
@@ -343,7 +392,7 @@ final class DgraphQueries {
       final var vars = new HashMap<String, String>();
       for (ApiModels.ApiSearchParameter param : parameters) {
          if (!param.value().isEmpty()) {
-            String fieldName = camelToSnake(param.fieldName());
+            String fieldName = AppUtils.camelToSnake(param.fieldName());
             String value = param.value();
             vars.put("$" + fieldName, value);
          }
@@ -357,7 +406,7 @@ final class DgraphQueries {
          final var parameters = payloads.get(i).parameters();
          for (var param : parameters) {
             if (!param.value().isEmpty()) {
-               String fieldName = camelToSnake(param.fieldName());
+               String fieldName = AppUtils.camelToSnake(param.fieldName());
                String value = param.value();
                vars.put(String.format(Locale.ROOT, "$%s_%d", fieldName, i), value);
             }
@@ -372,21 +421,21 @@ final class DgraphQueries {
       List<String> gqlFilters = new ArrayList<>();
       for (ApiModels.ApiSearchParameter param : parameters) {
          if (!param.value().isEmpty()) {
-            String fieldName = camelToSnake(param.fieldName());
+            String fieldName = AppUtils.camelToSnake(param.fieldName());
             Integer distance = param.distance();
             String value = param.value();
             if (distance == -1) {
                if (value.contains("_")) {
                   gqlFilters.add("ge(" + recordType + "." + fieldName + ", \"" + value.substring(0, value.indexOf("_"))
-                        + "\") AND le("
-                        + recordType + "." + fieldName + ", \"" + value.substring(value.indexOf("_") + 1) + "\")");
+                                 + "\") AND le("
+                                 + recordType + "." + fieldName + ", \"" + value.substring(value.indexOf("_") + 1) + "\")");
                } else {
                   gqlFilters.add("le(" + recordType + "." + fieldName + ", \"" + value + "\")");
                }
             } else if (distance == 0) {
                if (value.contains("_")) {
-                   gqlFilters.add(
-                     "eq(" + recordType + "." + fieldName + ", \"" + value.substring(0, value.indexOf("_")) + "\")");
+                  gqlFilters.add(
+                        "eq(" + recordType + "." + fieldName + ", \"" + value.substring(0, value.indexOf("_")) + "\")");
                } else {
                   gqlFilters.add("eq(" + recordType + "." + fieldName + ", \"" + value + "\")");
                }
@@ -410,7 +459,7 @@ final class DgraphQueries {
          List<String> gqlAndCondition = new ArrayList<>();
          for (ApiModels.ApiSearchParameter param : parameters) {
             if (!param.value().isEmpty()) {
-               String fieldName = camelToSnake(param.fieldName());
+               String fieldName = AppUtils.camelToSnake(param.fieldName());
                Integer distance = param.distance();
                String value = param.value();
                if (distance == 0) {
@@ -442,7 +491,7 @@ final class DgraphQueries {
       String sort = "";
       // Sort by default is by uid
       if (sortBy != null && !sortBy.isBlank() && !sortBy.equals("uid")) {
-         sort = String.format(Locale.ROOT, ", order%s: %s.%s", direction, recordType, camelToSnake(sortBy));
+         sort = String.format(Locale.ROOT, ", order%s: %s.%s", direction, recordType, AppUtils.camelToSnake(sortBy));
       }
       return String.format(Locale.ROOT, "func: type(%s), first: %d, offset: %d", recordType, limit, offset) + sort;
    }
@@ -463,6 +512,7 @@ final class DgraphQueries {
          final Boolean sortAsc) {
       String gqlFunc = getSearchQueryFunc(RecordType.GoldenRecord, offset, limit, sortBy, sortAsc);
       String gqlPagination = getSearchQueryPagination(RecordType.GoldenRecord, gqlFilters);
+
       String gql = "query search(" + String.join(", ", gqlArgs) + ") {\n";
       gql += String.format(Locale.ROOT, "all(%s) @filter(%s)", gqlFunc, gqlFilters);
       gql += "{\n";
@@ -470,6 +520,7 @@ final class DgraphQueries {
       gql += "}\n";
       gql += gqlPagination;
       gql += "}";
+
       return runExpandedGoldenRecordsQuery(gql, gqlVars);
    }
 
@@ -516,6 +567,7 @@ final class DgraphQueries {
       gql += "}\n";
       gql += gqlPagination;
       gql += "}";
+
       return runInteractionsQuery(gql, gqlVars);
    }
 
@@ -532,14 +584,13 @@ final class DgraphQueries {
                                           paginationOptions.sortAsc());
       String gqlPagination = getSearchQueryPagination(RecordType.GoldenRecord, gqlFilters);
       String gqlPaginationCount = Boolean.TRUE.equals(getInteractionCount)
-            ? String.format(Locale.ROOT,
-                            """
-                              var(func: type(GoldenRecord)) @filter(%s){
-                                a as count(GoldenRecord.interactions)}
-                                  interactionCount(){
-                                    total: sum(val(a))
-                                    }
-                            """, gqlFilters)
+            ? String.format(Locale.ROOT, """
+                                           var(func: type(GoldenRecord)) @filter(%s){
+                                             a as count(GoldenRecord.interactions)}
+                                               interactionCount(){
+                                                 total: sum(val(a))
+                                                 }
+                                         """, gqlFilters)
             : "";
       String gql = "query search(" + String.join(", ", gqlArgs) + ") {\n";
       gql += String.format(Locale.ROOT, "all(%s) @filter(%s)", gqlFunc, gqlFilters);
@@ -596,65 +647,140 @@ final class DgraphQueries {
       return searchInteractions(gqlFilters, gqlArgs, gqlVars, offset, limit, sortBy, sortAsc);
    }
 
-   static DgraphGoldenRecords findGoldenRecords(final ApiModels.ApiCrFindRequest req) {
-
-      final var op = req.operand();
-      StringBuilder queryBuilder = new StringBuilder("query query_1 ($").append(camelToSnake(op.name())).append(":string");
-      if (req.operands() != null) {
-         for (ApiModels.ApiCrFindRequest.ApiLogicalOperand op2 : req.operands()) {
-            queryBuilder.append(", $").append(camelToSnake(op2.operand().name())).append(":string");
-         }
+   static List<CustomSourceId> findSourceIdList(
+         final String facility,
+         final String patient) {
+      if (StringUtils.isBlank(facility) || StringUtils.isBlank(patient)) {
+         return List.of();
       }
-      queryBuilder.append(") {\n\n");
-      char alias = 'A';
-      queryBuilder.append("  var(func:type(GoldenRecord)) @filter(")
-                  .append(op.fn())
-                  .append("(GoldenRecord.")
-                  .append(camelToSnake(op.name()))
-                  .append(", $")
-                  .append(camelToSnake(op.name()))
-                  .append(op.fn().equals("match")
-                                ? String.format(Locale.ROOT, ", %d", op.distance())
-                                : "")
-                  .append(")) {\n    ")
-                  .append(alias)
-                  .append(" as uid\n  }\n\n");
-
-      if (req.operands() != null) {
-         for (ApiModels.ApiCrFindRequest.ApiLogicalOperand o : req.operands()) {
-            queryBuilder.append("  var(func:type(GoldenRecord)) @filter(")
-                        .append(o.operand().fn())
-                        .append("(GoldenRecord.")
-                        .append(camelToSnake(o.operand().name()))
-                        .append(", $")
-                        .append(camelToSnake(o.operand().name()))
-                        .append(o.operand().fn().equals("match")
-                                      ? String.format(Locale.ROOT, ", %d", o.operand().distance())
-                                      : "")
-                        .append(")) {\n    ")
-                        .append(++alias)
-                        .append(" as uid\n  }\n\n");
-         }
-      }
-
-      alias = 'A';
-      queryBuilder.append("  all(func:type(GoldenRecord)) @filter(uid(A)");
-      if (req.operands() != null) {
-         for (ApiModels.ApiCrFindRequest.ApiLogicalOperand o : req.operands()) {
-            queryBuilder.append(" ").append(o.operator()).append(" uid(").append(++alias).append(")");
-         }
-      }
-      queryBuilder.append(") {\n")
-                  .append(GOLDEN_RECORD_FIELD_NAMES)
-                  .append("  }\n}\n");
-      final var query = queryBuilder.toString();
       final var map = new HashMap<String, String>();
-      map.put("$" + camelToSnake(op.name()), op.value());
-      for (var o : req.operands()) {
-         map.put("$" + camelToSnake(o.operand().name()), o.operand().value());
+      map.put("$facility_id", facility);
+      map.put("$patient_id", patient);
+      return runSourceIdQuery(map).all().stream().map(DgraphSourceId::toSourceId).toList();
+   }
+
+   static List<ExpandedSourceId> findExpandedSourceIdList(
+         final String facility,
+         final String patient) {
+      if (StringUtils.isBlank(facility) || StringUtils.isBlank(patient)) {
+         return List.of();
       }
-      final var dgraphGoldenRecords = runGoldenRecordsQuery(query, map);
-      return dgraphGoldenRecords;
+      final var map = new HashMap<String, String>();
+      map.put("$facility_id", facility);
+      map.put("$patient_id", patient);
+      return runReverseGoldenRecordListFromSourceId(map).all()
+                                                        .stream()
+                                                        .map(DgraphReverseGoldenRecordFromSourceId::toExpandedSourceId)
+                                                        .toList();
+   }
+
+   static Either<MpiGeneralError, DgraphGoldenRecords> findGoldenRecords(final ApiModels.ApiCrFindRequest req) {
+      final var setFunctions = new HashSet<String>();
+      setFunctions.add("eq");
+      setFunctions.add("match");
+      final var setOperators = new HashSet<String>();
+      setOperators.add("and");
+      setOperators.add("or");
+      try {
+         final var operand = req.operand();
+         final var queryBuilder =
+               new StringBuilder("query query_1 ($").append(AppUtils.camelToSnake(operand.name())).append(":string");
+         if (req.operands() != null) {
+            for (ApiModels.ApiCrFindRequest.ApiLogicalOperand op2 : req.operands()) {
+               queryBuilder.append(", $").append(AppUtils.camelToSnake(op2.operand().name())).append(":string");
+            }
+         }
+         queryBuilder.append(") {\n\n");
+         char alias = 'A';
+         if (!setFunctions.contains(operand.fn())) {
+            throw new InvalidFunctionException(String.format("Invalid function: %s", operand.fn()));
+         }
+         if (operand.fn().equals("match")) {
+            if (operand.distance() == null) {
+               throw new InvalidFunctionException("no distance parameter");
+            } else if (operand.distance() < 0 || operand.distance() > 5) {
+               throw new InvalidFunctionException(String.format("distance error: 0 < %d <= 5", operand.distance()));
+            }
+         }
+         queryBuilder.append("  var(func:type(GoldenRecord)) @filter(")
+                     .append(operand.fn())
+                     .append("(GoldenRecord.")
+                     .append(AppUtils.camelToSnake(operand.name()))
+                     .append(", $")
+                     .append(AppUtils.camelToSnake(operand.name()))
+                     .append(operand.fn().equals("match")
+                                   ? String.format(Locale.ROOT, ", %d", operand.distance())
+                                   : "")
+                     .append(")) {\n    ")
+                     .append(alias)
+                     .append(" as uid\n  }\n\n");
+
+         if (req.operands() != null) {
+            for (ApiModels.ApiCrFindRequest.ApiLogicalOperand o : req.operands()) {
+               if (!setFunctions.contains(o.operand().fn())) {
+                  throw new InvalidFunctionException(String.format("Invalid function: %s", o.operand().fn()));
+               }
+               if (o.operand().fn().equals("match")) {
+                  if (o.operand().distance() == null) {
+                     throw new InvalidFunctionException("no distance parameter");
+                  } else if (o.operand().distance() < 0 || o.operand().distance() > 5) {
+                     throw new InvalidFunctionException(String.format("distance error: 0 < %d <= 5", o.operand().distance()));
+                  }
+               }
+               if (!setOperators.contains(o.operator())) {
+                  throw new InvalidOperatorException(String.format("Invalid operator: %s", o.operator()));
+               }
+               queryBuilder.append("  var(func:type(GoldenRecord)) @filter(")
+                           .append(o.operand().fn())
+                           .append("(GoldenRecord.")
+                           .append(AppUtils.camelToSnake(o.operand().name()))
+                           .append(", $")
+                           .append(AppUtils.camelToSnake(o.operand().name()))
+                           .append(o.operand().fn().equals("match")
+                                         ? String.format(Locale.ROOT, ", %d", o.operand().distance())
+                                         : "")
+                           .append(")) {\n    ")
+                           .append(++alias)
+                           .append(" as uid\n  }\n\n");
+            }
+         }
+
+         alias = 'A';
+         queryBuilder.append("  all(func:type(GoldenRecord)) @filter(uid(A)");
+         if (req.operands() != null) {
+            for (ApiModels.ApiCrFindRequest.ApiLogicalOperand o : req.operands()) {
+               queryBuilder.append(" ").append(o.operator()).append(" uid(").append(++alias).append(")");
+            }
+         }
+         queryBuilder.append(") {\n").append(GOLDEN_RECORD_FIELD_NAMES).append("  }\n}\n");
+         final var query = queryBuilder.toString();
+         final var map = new HashMap<String, String>();
+         map.put("$" + AppUtils.camelToSnake(operand.name()), operand.value());
+         for (var o : req.operands()) {
+            map.put("$" + AppUtils.camelToSnake(o.operand().name()), o.operand().value());
+         }
+
+         final var dgraphGoldenRecords = runGoldenRecordsQuery(query, map);
+         return Either.right(dgraphGoldenRecords);
+      } catch (InvalidFunctionException e) {
+         LOGGER.error(e.getLocalizedMessage(), e);
+         return Either.left(new MpiServiceError.InvalidFunctionError(e.getMessage()));
+      } catch (InvalidOperatorException e) {
+         LOGGER.error(e.getLocalizedMessage(), e);
+         return Either.left(new MpiServiceError.InvalidOperatorError(e.getLocalizedMessage()));
+      }
+   }
+
+   private static class InvalidFunctionException extends Exception {
+      InvalidFunctionException(final String errorMessage) {
+         super(errorMessage);
+      }
+   }
+
+   private static class InvalidOperatorException extends Exception {
+      InvalidOperatorException(final String errorMessage) {
+         super(errorMessage);
+      }
    }
 
 
